# aivk-qq

./: README.md  llms.txt  pyproject.toml
docs/: api_reference.md  api_reference_zh.md  deprecation_migration.md  feature_checklist.md  install_guide_zh.md  technical_manual.md  user_guide.md
examples/: napcat_api_examples.py  napcat_modular_example.py
scripts/: pyupgrade.py
src/aivk_qq/: __about__.py
src/aivk_qq/base/: enums.py  message.py  models.py  utils.py
src/aivk_qq/cli/: __init__.py  __main__.py
src/aivk_qq/mcp/: __init__.py  __main__.py  server.py
src/aivk_qq/napcat/: api.py  client.py  installer.py  napcat.py  server.py
tests/: test_advanced_features.py  test_comprehensive_api.py  test_http_client.py  test_ws_client.py  testing_memo.md
