[project]
name = "aivk_qq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "lightjunction.me@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aivk>=0.3.2.6",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "ncatbot>=3.7.6.post2",
]

[project.scripts]
aivk-qq = "aivk_qq.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
