[project]
name = "aivk_qq"
version = "0.1.4.0"
description = "AIVK-QQ：一个强大的QQ机器人框架，集成MCP服务器、CLI工具、Napcat.Shell启动器和Napcat API SDK于一体，为AI驱动的QQ交互提供全方位支持"
readme = "README.md"
authors = [
    { name = "LIghtJUNction", email = "lightjunction.me@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "aivk>=0.3.2.20",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]

[project.scripts]
aivk-qq = "aivk_qq.cli:cli"

[project.optional-dependencies]
dev = [
    "pyupgrade>=3.19.1",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
